--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,14 @@
-Django==1.7.1
+#Django==1.7.1
 argparse==1.2.1
 boto==2.34.0
 dj-database-url==0.3.0
-django-herokuapp==0.9.19
 django-require==1.0.6
 django-require-s3==1.0.0
 django-storages==1.1.8
-psycopg2==2.5.4
 pytz==2014.10
-sh==1.09
+#sh==1.09
+pbs==0.110
 waitress==0.8.9
 wsgiref==0.1.2
+psycopg2==2.5.4
+#django-herokuapp==0.9.19
